Add lighter canvas and black/white theme setting

--- a/editor.html
+++ b/editor.html
@@ -26,6 +26,17 @@
             </div>
 
             <div class="menu-section">
+              <div class="menu-title">Canvas</div>
+              <label class="field-block" for="canvas-theme-select">
+                <span>Theme</span>
+                <select id="canvas-theme-select" class="scale-input">
+                  <option value="light" selected>Light blueprint</option>
+                  <option value="bw">Black &amp; white</option>
+                </select>
+              </label>
+            </div>
+
+            <div class="menu-section">
               <div class="menu-title">Snapping</div>
               <label class="menu-row"><input id="snap-grid-toggle" type="checkbox" checked />Snap to grid</label>
               <label class="menu-row"><input id="snap-mid-toggle" type="checkbox" checked />Snap to midpoint</label>
