--- a/editor.html
+++ b/editor.html
@@ -86,7 +86,7 @@
               <div class="menu-title">Options</div>
               <label class="menu-row"><input id="show-dimensions-toggle" type="checkbox" checked />Show dimensions</label>
               <label class="menu-row"><input id="show-grid-units-toggle" type="checkbox" />Show grid units</label>
-              <label class="menu-row"><input id="continue-polyline-toggle" type="checkbox" checked />Continue polyline</label>
+              <label class="menu-row"><input id="continue-polyline-toggle" type="checkbox" checked />Continus line</label>
             </div>
 
             <div class="menu-section">
@@ -106,8 +106,8 @@
             <h2 class="section-title">Tool Grid</h2>
             <div class="tool-grid">
               <button class="tool-button tool-tile" data-tool="select" type="button">Select</button>
-              <button class="tool-button tool-tile" data-tool="iso-line" type="button">Iso Line</button>
-              <button class="tool-button tool-tile" data-tool="polyline" type="button">Polyline</button>
+              <button class="tool-button tool-tile" data-tool="iso-line" type="button">Line</button>
+              <button class="tool-button tool-tile" data-tool="polyline" type="button">Continus line</button>
               <button class="tool-button tool-tile" data-tool="measure" type="button">Measure</button>
               <button class="tool-button tool-tile" data-tool="fill" type="button">Fill</button>
               <button class="tool-button tool-tile" data-tool="erase" type="button">Erase</button>
