Improve stroke width control, fill behavior, and alpha defaults

--- a/editor.html
+++ b/editor.html
@@ -130,17 +130,21 @@
             </label>
             <label class="field-block" for="fill-opacity-input">
               <span>Fill α</span>
-              <input id="fill-opacity-input" class="range-input" type="range" min="0" max="1" step="0.01" value="0.25" />
+              <input id="fill-opacity-input" class="range-input" type="range" min="0" max="1" step="0.01" value="1" />
             </label>
             <label class="field-block" for="stroke-width-input">
-              <span>Width</span>
+              <span>Stroke width</span>
               <select id="stroke-width-input" class="style-select">
                 <option value="1">1</option>
                 <option value="2" selected>2</option>
                 <option value="3">3</option>
                 <option value="4">4</option>
+                <option value="5">5</option>
                 <option value="6">6</option>
+                <option value="7">7</option>
                 <option value="8">8</option>
+                <option value="9">9</option>
+                <option value="10">10</option>
               </select>
             </label>
             <label class="tool-toggle"><input id="fill-enabled-toggle" type="checkbox" checked />Fill enabled</label>
