--- a/editor.html
+++ b/editor.html
@@ -9,7 +9,20 @@
   <body>
     <div class="app">
       <header class="menubar" aria-label="Main menu bar">
-        <button class="menu-item" type="button">File</button>
+        <div class="menu-item-wrap">
+          <button class="menu-item" id="menuFileBtn" type="button" aria-haspopup="true" aria-expanded="false" aria-controls="menuFileDropdown">
+            File
+          </button>
+
+          <div class="menu-dropdown" id="menuFileDropdown" role="menu" aria-label="File menu" data-open="false">
+            <div class="menu-section">
+              <div class="menu-title">Project</div>
+              <button id="project-save-btn" class="menu-link-btn" type="button">Save</button>
+              <button id="project-load-btn" class="menu-link-btn" type="button">Load</button>
+              <input id="project-load-input" type="file" accept=".json,application/json" class="visually-hidden" />
+            </div>
+          </div>
+        </div>
         <div class="menu-item-wrap">
           <button class="menu-item" id="menuEditBtn" type="button" aria-haspopup="true" aria-expanded="false" aria-controls="menuEditDropdown">
             Edit
@@ -68,7 +81,7 @@
           <div class="menu-dropdown" id="menuSettingsDropdown" role="menu" aria-label="Settings menu" data-open="false">
             <div class="menu-section">
               <div class="menu-title">Options</div>
-              <label class="menu-row"><input id="show-dimensions-toggle" type="checkbox" checked />Show dimensions</label>
+              <label class="menu-row"><input id="show-dimensions-toggle" type="checkbox" checked />Smart measurements</label>
               <label class="menu-row"><input id="show-grid-units-toggle" type="checkbox" />Show grid units</label>
               <label class="menu-row"><input id="continue-polyline-toggle" type="checkbox" checked />Continus line</label>
             </div>
@@ -94,11 +107,30 @@
               <button class="tool-button tool-tile" data-tool="polyline" type="button">Continus line</button>
               <button class="tool-button tool-tile" data-tool="measure" type="button">Measure</button>
               <button class="tool-button tool-tile" data-tool="fill" type="button">Fill</button>
+              <button class="tool-button tool-tile" data-tool="eyedropper" type="button">Eyedropper</button>
               <button class="tool-button tool-tile" data-tool="erase" type="button">Erase</button>
             </div>
             <div class="tool-actions">
               <button class="tool-button" id="undo-btn" type="button">Undo</button>
               <button class="tool-button" id="redo-btn" type="button">Redo</button>
+            </div>
+          </section>
+
+          <section class="side-section" aria-label="Layers panel">
+            <h2 class="section-title">Layers</h2>
+            <div id="layers-panel" class="layers-panel">
+              <details class="layers-group" open>
+                <summary>Polygons (<span id="layers-polygons-count">0</span>)</summary>
+                <div id="layers-polygons-list" class="layers-list"></div>
+              </details>
+              <details class="layers-group" open>
+                <summary>Lines (<span id="layers-lines-count">0</span>)</summary>
+                <div id="layers-lines-list" class="layers-list"></div>
+              </details>
+              <details class="layers-group" open>
+                <summary>Measurements (<span id="layers-measurements-count">0</span>)</summary>
+                <div id="layers-measurements-list" class="layers-list"></div>
+              </details>
             </div>
           </section>
 
