Add File→Reset and enforce layer-based drawing/selection rules

--- a/editor.html
+++ b/editor.html
@@ -19,6 +19,7 @@
               <div class="menu-title">Project</div>
               <button id="project-save-btn" class="menu-link-btn" type="button">Save</button>
               <button id="project-load-btn" class="menu-link-btn" type="button">Load</button>
+              <button id="project-reset-btn" class="menu-link-btn" type="button">Reset</button>
               <input id="project-load-input" type="file" accept=".json,application/json" class="visually-hidden" />
             </div>
           </div>
